--- a/pages/contact.html
+++ b/pages/contact.html
@@ -13,7 +13,7 @@ awesome/4.7.0/css/font-awesome.min.css" />
 ="true"></i></div></h1>
     <nav>
     <ul>
-      <li><a href="/CS260/hatdraw/index.html">Home</a></li>
+      <li><a href="/">Home</a></li>
       <li><a href="exchangeHat.html">Exchange Hat</a></li>
       <li><a href="raffleHat.html">Raffle Hat</a></li>
       <li><a href="contact.html" class='active-page'>Contact</a></li>
