--- a/pages/exchangeHat.html
+++ b/pages/exchangeHat.html
@@ -51,7 +51,7 @@ awesome/4.7.0/css/font-awesome.min.css" />
     <footer>
       <p>***This website is under construction. For now, just soak in the happy
         colors.***</p>
-      <p><a href="https://github.com/BYU-CS260-Winter-2018/lab-1-tymull">
+      <p><a href="https://github.com/tymull/hatdraw">
       GitHub repository</p>
     </footer>
   </body>
